src/test/deca/syntax/invalid/missing_op.deca

// Description :
// Expression invalide : deux littéraux consécutifs sans opérateur.
// Ici, on teste une affectation où l'expression "1 2" n'est pas valide
// car il manque un opérateur entre 1 et 2.
//
// Resultats :
// Erreur syntaxique
// Regle : sum_expr / mult_expr (les opérateurs + - * / % sont obligatoires entre deux termes)
//

{
    x = 1 2 ;
}